# rps-image-classification

./: .gitignore  LICENSE  Makefile  README.md  RPS_mock.ipynb  installed.txt  main.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: arch_cv_results.json  best_arch.json  best_params.json  best_params_medium.json  grid_cv_results.json  grid_cv_results_medium.json
models/baseline_large/: model.pt  test_metrics.json  training_log.csv
models/baseline_medium/: model.pt  test_metrics.json  training_log.csv
models/baseline_small/: model.pt  test_metrics.json  training_log.csv
models/best_model_large/: model.pt  test_metrics.json  training_log.csv
models/final_best/: classification_report.json  confusion_matrix.json  final.pt  final_test_metrics.json
models/tiny/: test_metrics.json  training_log.csv
notebooks/: data_exploration.ipynb  preprocessing.ipynb
references/: ML project steps.txt
references/splits/: manifest_all.csv  manifest_test.csv  manifest_train.csv  manifest_val.csv
rps_classification/: __init__.py  config.py  data_utils.py  dataset.py  features.py  plots.py
rps_classification/modeling/: __init__.py  predict.py  train.py
tests/: test_data.py
