[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rps_classification"
version = "0.0.1"
description = "CNN for Rock-Paper-Scissors Classification"
authors = [
  { name = "Isabella Cadisco" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "mkdocs",
    "pandas>=2.3.3",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = ">3.11.0"


[tool.ruff]
line-length = 99
src = ["rps_classification"]
include = ["pyproject.toml", "rps_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rps_classification"]
force-sort-within-sections = true

